Add FCFM favicon

--- a/Inventory/templates/home.html
+++ b/Inventory/templates/home.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Inventario CC4401</title>
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
 </head>
 <body>
 <h1>Inventario CC4401</h1>
